# Rag-Agent

./: .env.example  .gitignore  pyproject.toml
agent/: react_agent.py
agent/tools/: agent_tools.py
app/: main.py
app/agent/: react_agent.py
app/common/: exceptions.py  response.py
app/config/: __init__.py  loader.py  schema.py
app/core/: config.py  config_loader.py  config_schema.py  errors.py  logging.py  middleware.py
app/integrations/: dashscope_client.py  embedding_client.py  llm_client.py  qdrant_client.py
app/middleware/: http.py
app/observability/: logging.py
app/rag/: ingest_service.py  qdrant_vector_store.py  retriever.py  vector_store.py  vector_store_base.py
app/schemas/: chat.py  common.py  knowledge.py  rag.py  report.py  stream.py
config/: agent.yml  chroma.yml  prompts.yml  rag.yml  server.yml  vector.yml
model/: factor.py
rag/: rag_service.py  vector_store.py
tests/: test_agent_tools.py  test_chat.py  test_config.py  test_embedding_client.py  test_final_answer_streamer.py  test_health.py  test_ingest_service.py  test_knowledge_api.py  test_knowledge_schema.py  test_llm_client.py  test_middleware.py  test_perf.py  test_perf_fixes.py  test_qdrant_client.py  test_qdrant_memory_mode.py  test_qdrant_vector_store.py  test_react_agent_stream.py  test_report.py  test_schemas.py  test_service_concurrency.py  test_services_two_phase.py  test_storage.py  test_sync_stream.py  test_vector_api.py  test_vector_config.py  test_vector_store_base.py
utils/: config_handler.py  file_handler.py  logger_handler.py  prompt_loader.py
(+26 files in other folders)
